--- a/RickAndMorty/Features/Characters/CharactersViewController/CharactersCell/CharactersTableViewCell.xib
+++ b/RickAndMorty/Features/Characters/CharactersViewController/CharactersCell/CharactersTableViewCell.xib
@@ -9,61 +9,71 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="179" id="KGk-i7-Jjw" customClass="CharactersTableViewCell" customModule="RickAndMorty" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="413" height="179"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="220" id="KGk-i7-Jjw" customClass="CharactersTableViewCell" customModule="RickAndMorty" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="380" height="220"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="413" height="179"/>
+                <rect key="frame" x="0.0" y="0.0" width="380" height="220"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dey-oY-IZS">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="180"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3mn-sn-qkm">
+                        <rect key="frame" x="8" y="8" width="364" height="204"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diane Sanchez" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPD-wY-65Z">
+                                <rect key="frame" x="192" y="24" width="168" height="21.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dey-oY-IZS">
+                                <rect key="frame" x="4" y="4" width="180" height="196"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="180" id="0VC-ae-6tg"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vivo-Humano" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBt-QI-Sbk">
+                                <rect key="frame" x="188" y="53.5" width="172" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="12"/>
+                                <color key="textColor" red="0.3469038216" green="1" blue="0.67950841620000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qiq-hq-BeR">
+                                <rect key="frame" x="188" y="140" width="172" height="40"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Xkh-nl-K3a"/>
+                                </constraints>
+                                <state key="normal" title="Ver espisódios">
+                                    <color key="titleColor" red="0.3469038216" green="1" blue="0.67950841620000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="fetchEpiodies:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4qy-JC-owb"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="180" id="TWd-bf-ett"/>
-                            <constraint firstAttribute="width" constant="200" id="waq-UI-3hQ"/>
+                            <constraint firstItem="fPD-wY-65Z" firstAttribute="top" secondItem="3mn-sn-qkm" secondAttribute="top" constant="24" id="3gE-w8-OjM"/>
+                            <constraint firstAttribute="trailing" secondItem="qiq-hq-BeR" secondAttribute="trailing" constant="4" id="4Sg-Mq-bWU"/>
+                            <constraint firstItem="Dey-oY-IZS" firstAttribute="leading" secondItem="3mn-sn-qkm" secondAttribute="leading" constant="4" id="Bpb-cf-cXI"/>
+                            <constraint firstAttribute="bottom" secondItem="qiq-hq-BeR" secondAttribute="bottom" constant="24" id="DAu-OV-sde"/>
+                            <constraint firstItem="qiq-hq-BeR" firstAttribute="leading" secondItem="Dey-oY-IZS" secondAttribute="trailing" constant="4" id="EwJ-Nv-kHY"/>
+                            <constraint firstItem="FBt-QI-Sbk" firstAttribute="leading" secondItem="Dey-oY-IZS" secondAttribute="trailing" constant="4" id="IUG-1s-s85"/>
+                            <constraint firstItem="FBt-QI-Sbk" firstAttribute="top" secondItem="fPD-wY-65Z" secondAttribute="bottom" constant="8" id="RAE-ri-0hj"/>
+                            <constraint firstAttribute="trailing" secondItem="FBt-QI-Sbk" secondAttribute="trailing" constant="4" id="c09-DQ-J5B"/>
+                            <constraint firstAttribute="bottom" secondItem="Dey-oY-IZS" secondAttribute="bottom" constant="4" id="ho3-Lg-9rQ"/>
+                            <constraint firstItem="Dey-oY-IZS" firstAttribute="top" secondItem="3mn-sn-qkm" secondAttribute="top" constant="4" id="ikc-s7-Jjn"/>
+                            <constraint firstAttribute="trailing" secondItem="fPD-wY-65Z" secondAttribute="trailing" constant="4" id="nRn-nN-hyT"/>
+                            <constraint firstItem="fPD-wY-65Z" firstAttribute="leading" secondItem="Dey-oY-IZS" secondAttribute="trailing" constant="8" id="siU-hI-nMQ"/>
                         </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Diane Sanchez" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPD-wY-65Z">
-                        <rect key="frame" x="216" y="16" width="181" height="24"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vivo-Humano" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBt-QI-Sbk">
-                        <rect key="frame" x="216" y="48" width="161" height="17"/>
-                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
-                        <color key="textColor" red="0.3469038216" green="1" blue="0.67950841620000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qiq-hq-BeR">
-                        <rect key="frame" x="216" y="109" width="161" height="40"/>
-                        <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="40" id="qhi-5C-rE1"/>
-                        </constraints>
-                        <state key="normal" title="Ver espisódios">
-                            <color key="titleColor" red="0.3469038216" green="1" blue="0.67950841620000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                        </state>
-                        <connections>
-                            <action selector="fetchEpiodies:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4qy-JC-owb"/>
-                        </connections>
-                    </button>
+                    </view>
                 </subviews>
-                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                 <constraints>
-                    <constraint firstItem="Dey-oY-IZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="3gO-Tc-qAI"/>
-                    <constraint firstItem="fPD-wY-65Z" firstAttribute="leading" secondItem="Dey-oY-IZS" secondAttribute="trailing" constant="16" id="ANa-Pp-3C7"/>
-                    <constraint firstItem="qiq-hq-BeR" firstAttribute="leading" secondItem="Dey-oY-IZS" secondAttribute="trailing" constant="16" id="Auk-Te-YgJ"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="qiq-hq-BeR" secondAttribute="bottom" constant="20" id="OFb-on-LqI"/>
-                    <constraint firstItem="Dey-oY-IZS" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="T9j-wZ-2DN"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="FBt-QI-Sbk" secondAttribute="trailing" constant="16" id="ZUE-HQ-l36"/>
-                    <constraint firstItem="fPD-wY-65Z" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="fXb-Um-1P6"/>
-                    <constraint firstAttribute="bottom" secondItem="Dey-oY-IZS" secondAttribute="bottom" id="hGU-L1-d7H"/>
-                    <constraint firstItem="FBt-QI-Sbk" firstAttribute="top" secondItem="fPD-wY-65Z" secondAttribute="bottom" constant="8" id="iSN-pe-Fvb"/>
-                    <constraint firstItem="Dey-oY-IZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="idz-Jk-q1y"/>
-                    <constraint firstItem="FBt-QI-Sbk" firstAttribute="leading" secondItem="Dey-oY-IZS" secondAttribute="trailing" constant="16" id="jox-qi-jVl"/>
-                    <constraint firstAttribute="trailing" secondItem="fPD-wY-65Z" secondAttribute="trailing" constant="16" id="tdl-GG-BeE"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="qiq-hq-BeR" secondAttribute="trailing" constant="16" id="vbe-Rx-Mil"/>
+                    <constraint firstItem="3mn-sn-qkm" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Igh-81-cKn"/>
+                    <constraint firstAttribute="trailing" secondItem="3mn-sn-qkm" secondAttribute="trailing" constant="8" id="cAX-U7-j2v"/>
+                    <constraint firstItem="3mn-sn-qkm" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="rCb-bM-XPR"/>
+                    <constraint firstAttribute="bottom" secondItem="3mn-sn-qkm" secondAttribute="bottom" constant="8" id="tiE-Vn-9CL"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -73,7 +83,7 @@
                 <outlet property="nameLabel" destination="fPD-wY-65Z" id="R2O-3x-YCG"/>
                 <outlet property="statusLabel" destination="FBt-QI-Sbk" id="6iS-Eo-L5n"/>
             </connections>
-            <point key="canvasLocation" x="97.826086956521749" y="187.16517857142856"/>
+            <point key="canvasLocation" x="163.768115942029" y="200.22321428571428"/>
         </tableViewCell>
     </objects>
 </document>
